--- a/examples/makefile
+++ b/examples/makefile
@@ -1,3 +1,6 @@
+# Copyright (c) 2011 Andy Jost
+# Please see the file LICENSE.txt in this distribution for license terms.
+
 SOURCES := example1.cpp
 OBJECTS := $(SOURCES:.cpp=.o)
 SHARED_LIBS := example1.so
